# expense-tracker

./: .gitignore  .renderignore  DEPLOYMENT.md  Dockerfile  MIGRATION.md  PROJECT_STATUS.md  README.md  claude-script.sh  docker-compose.yml  docker-dev.sh  pyproject.toml  requirements.txt  start.py  test_spanish_parser.js
app/: alembic.ini  database.py  init_db.py  main.py  models.py  schemas.py  test_docker.py
app/alembic/: env.py
app/alembic/versions/: c0f59c807e22_add_payment_method_fields.py
app/routers/: categories.py  expenses.py  merchant_rules.py
app/services/: billing.py  categorization.py
n8n/: Expense automation.json
n8n-workflows/: enhanced-spanish-parser.js
scripts/: dev.sh
